# CVTraining2013Azure

./: .gitignore  .gitignore~  CMakeLists.txt  CMakeLists.txt~  README.md
FeatureDatabase/: CMakeLists.txt  CMakeLists.txt~
FeatureDatabase/include/: FeatureDatabase.h  FeatureDatabase.h~
FeatureDatabase/src/: FeatureDatabase.cpp  python-FeatureDatabase-module.cpp  python-FeatureDatabase.cpp  python-FeatureDatabase.h
FeatureItem/: CMakeLists.txt  CMakeLists.txt~
FeatureItem/include/: FeatureItem.h
FeatureItem/src/: FeatureItem.cpp  python-FeatureItem.cpp
GenerateImageFeature/: CMakeLists.txt  test.sh~
GenerateImageFeature/src/: main.cpp
GenerateInitialDictionary/: CMakeLists.txt  CMakeLists.txt~  main.cpp  test.sh~
GenerateInitialDictionary/src/: main.cpp  main.cpp~
GenerateMainDatabase/: CMakeLists.txt
GenerateMainDatabase/src/: main.cpp
GenerateSemanticDatabase/: CMakeLists.txt  main.cpp
GenerateSemanticDatabase/src/: main.cpp
IOUtils/: CMakeLists.txt  CMakeLists.txt~
IOUtils/src/: IO.cpp  python-IO.cpp
LLC/: CMakeLists.txt  CMakeLists.txt~
LLC/include/: LLC.h  LLCoder.h  python-LLC.h  sum.h
LLC/src/: LLC.cpp  LLCoder.cpp  python-LLC-module.cpp  python-LLC.cpp  sum.cpp
LLCEncode/: CMakeLists.txt  CMakeLists.txt~  main.cpp  test.sh  test.sh~
LLCEncode/src/: main.cpp
LearnDictionary/: B_1374826469_0.yml  CMakeLists.txt  LearnDictionary.cbp  LearnDictionary.depend  LearnDictionary.layout  SSt.yml  S_1374826469_0.yml  Xst.yml  main.cpp  test.sh  test.sh~
LearnDictionary/src/: main.cpp
MatrixUtils/: CMakeLists.txt  CMakeLists.txt~
MatrixUtils/include/: Util.h
MatrixUtils/src/: Util.cpp
Python/: 1.yml  127_0005.yml  127_0005.yml~  B.yml  X.yml  cvyaml.py  llcoder.py  qfea.yml  run.py  scc_config.py  siftgen.py  website.py
Python-SIFT/: CMakeLists.txt  CMakeLists.txt~
Python-SIFT/src/: python-sift.cpp  无标题文档
Python/config/: feaConfig.yml  feaConfig.yml~  llcBase.yml  llcBase.yml~  llcConfig.yml  llcConfig.yml~  llcPyramid.yml~  llc_pyramid.yml  llc_pyramid.yml~  scConfig.yml
Retrieval/: CMakeLists.txt  CMakeLists.txt~
Retrieval/include/: Retrieval.h  python-Retrieval.h
Retrieval/src/: Retrieval.cpp  python-Retrieval-Module.cpp  python-Retrieval.cpp
RetrievalDatabase/: CMakeLists.txt  CMakeLists.txt~
RetrievalDatabase/include/: RetrievalDataBase.h  RetrievalDatabase.h
RetrievalDatabase/src/: RetrievalDataBase.cpp  RetrievalDatabase.cpp  python-RetrievalDatabase.cpp
RunTest/: CMakeLists.txt
RunTest/src/: main.cpp
SCC/: CMakeLists.txt  CMakeLists.txt~
SCC/include/: SCC.h
SCC/src/: SCC.cpp  python-SCC.cpp  python-SCC.cpp~
SIFT/: CMakeLists.txt  CMakeLists.txt~
SIFT/include/: SIFT.h
SIFT/src/: SIFT.cpp  python-sift.cpp
SemanticDatabase/: CMakeLists.txt  CMakeLists.txt~
SemanticDatabase/include/: SemanticDatabase.h
SemanticDatabase/src/: SemanticDatabase.cpp  python-SemanticDatabase.cpp
SparseCoder/: CMakeLists.txt  CMakeLists.txt~
SparseCoder/include/: SparseCoder.h
SparseCoder/src/: SparseCoder.cpp  python-SparseCoder.cpp
SparseCoding/: CMakeLists.txt  CMakeLists.txt~
SparseCoding/src/: SparseCoding.cpp  python-SparseCoding.cpp  python-SparseCoding.cpp~
TestRetrieval/: TestRetrieval.cbp  TestRetrieval.layout
Website_Integration/: config.py  config.py~  scc_config.py  scc_site.py
include/: FeatureDatabase.h  IO.h  LLC.h  Mat2Numpy.h  Retrieval.h  RetrievalDataBase.h  RetrievalDatabase.h  SIFT.h  SemanticDatabase.h  python-map.h  python-map.h~  sparseCoding.h
