project(SCCASDF)
cmake_minimum_required(VERSION 2.8)

add_subdirectory(GenerateImageFeature)
add_subdirectory(FeatureDatabase)
add_subdirectory(FeatureItem)
add_subdirectory(IOUtils)
add_subdirectory(LLC)
add_subdirectory(MatrixUtils)
add_subdirectory(Retrieval)
add_subdirectory(RetrievalDatabase)
add_subdirectory(SCC)
add_subdirectory(SemanticDatabase)
add_subdirectory(SIFT)
add_subdirectory(SparseCoding)
add_subdirectory(SparseCoder)
