project(libFeatureItem)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python thread filesystem system REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
include_directories(include)
include_directories(../include)
add_library(FeatureItem STATIC ${src_dir}/FeatureItem.cpp) 
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-FeatureItem ${src_dir}/python-FeatureItem.cpp)
	TARGET_LINK_LIBRARIES(python-FeatureItem FeatureItem IOUtils  ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS})
	set_target_properties(python-FeatureItem PROPERTIES OUTPUT_NAME "FeatureItem")
	install (TARGETS python-FeatureItem DESTINATION /usr/lib/python2.7/)
endif()

