project(libFeatureDatabase)
cmake_minimum_required(VERSION 2.8)

find_package(PythonInterp)
find_package(PythonLibs)
find_package(Boost COMPONENTS python thread filesystem system)
find_package(OpenCV REQUIRED)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
SET( GCC_COVERAGE_LINK_FLAGS    "-static")
#SET( CMAKE_SHARED_LINKER_FLAGS  "${CMAKE_SHARED_LINKER_FLAGS} ${GCC_COVERAGE_LINK_FLAGS}" )
add_definitions(-std=c++11)
add_definitions(-fPIC)
add_definitions(-pthread)
#add_definitions(-static)
include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
include_directories(include)
include_directories(../include)
if (OpenCV_FOUND)
	add_executable(imgfea ${src_dir}/main.cpp)
	target_link_libraries(imgfea FeatureDatabase FeatureItem IOUtils MatrixUtils SIFT ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS} )
endif()


