project(libIOUtils)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python thread filesystem system)
FIND_PACKAGE(OpenCV REQUIRED)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
add_definitions(-std=c++11)
add_definitions(-fPIC)
include_directories(include)
include_directories(../include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
add_library(IOUtils STATIC ${src_dir}/IO.cpp) 
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-IOUtils ${src_dir}/python-IO.cpp)
	TARGET_LINK_LIBRARIES(python-IOUtils IOUtils ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS})
	set_target_properties(python-IOUtils PROPERTIES OUTPUT_NAME "IOUtils")
	install (TARGETS python-IOUtils DESTINATION /usr/lib/python2.7/)
endif()