project(libLLC)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python thread filesystem system)
FIND_PACKAGE(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
include_directories(include)
include_directories(../include)
add_library(LLC STATIC ${src_dir}/LLC.cpp ${src_dir}/sum.cpp ${src_dir}/LLCoder.cpp) 
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-LLC ${src_dir}/python-LLC.cpp ${src_dir}/python-LLC-module.cpp)
	TARGET_LINK_LIBRARIES(python-LLC LLC FeatureItem IOUtils MatrixUtils ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS} )
	set_target_properties(python-LLC PROPERTIES OUTPUT_NAME "LLC")
	install (TARGETS python-LLC DESTINATION /usr/lib/python2.7/)
endif()