project(python-SIFT)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python)
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
add_definitions(-std=c++11)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
include_directories(include)
include_directories(../include)
PYTHON_ADD_MODULE(sift ${src_dir}/python-sift.cpp)
#ADD_EXECUTABLE(python-sift ${src_dir}/SIFT.cpp ${src_dir}/python-sift.cpp)
TARGET_LINK_LIBRARIES(sift ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS})
