project(libRetrieval)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python thread filesystem system)
FIND_PACKAGE(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
include_directories(include)
include_directories(../include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
add_library(Retrieval STATIC ${src_dir}/Retrieval.cpp) 
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-Retrieval ${src_dir}/python-Retrieval.cpp ${src_dir}/python-Retrieval-Module.cpp)
	TARGET_LINK_LIBRARIES(python-Retrieval Retrieval SemanticDatabase SCC SparseCoding RetrievalDatabase IOUtils MatrixUtils ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS})
	set_target_properties(python-Retrieval PROPERTIES OUTPUT_NAME "retrieval")
	install (TARGETS python-Retrieval DESTINATION /usr/lib/python2.7/)
endif()
