project(libSIFT)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS filesystem python thread REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
include_directories(include)
include_directories(../include)
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-SIFT ${src_dir}/python-sift.cpp)
	TARGET_LINK_LIBRARIES(python-SIFT ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS} SIFT IOUtils)
	set_target_properties(python-FeatureDatabase PROPERTIES OUTPUT_NAME "SIFT")
endif()
add_library(SIFT STATIC ${src_dir}/SIFT.cpp) 
