project(libSemanticDatabase)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python thread filesystem system)
FIND_PACKAGE(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
include_directories(include)
include_directories(../include)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-SemanticDatabase ${src_dir}/python-SemanticDatabase.cpp)
	TARGET_LINK_LIBRARIES(python-SemanticDatabase SemanticDatabase FeatureDatabase IOUtils MatrixUtils ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS})
	set_target_properties(python-SemanticDatabase PROPERTIES OUTPUT_NAME "SemanticDatabase")
endif()
add_library(SemanticDatabase STATIC ${src_dir}/SemanticDatabase.cpp) 
