project(libSparseCoder)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(PythonInterp)
FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(Boost COMPONENTS python REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OPENCV_INCLUDE_DIRS})
include_directories(include)
include_directories(../include)
add_library(SparseCoder STATIC ${src_dir}/SparseCoder.cpp) 
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-SparseCoder ${src_dir}/python-SparseCoder.cpp)
	TARGET_LINK_LIBRARIES(python-SparseCoder SparseCoder SparseCoding MatrixUtils IOUtils ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS} )
	set_target_properties(python-SparseCoder PROPERTIES OUTPUT_NAME "LLCoder")
endif()

