project(libSparseCoding)
cmake_minimum_required(VERSION 2.8)

find_package(PythonInterp)
find_package(PythonLibs)
find_package(Boost COMPONENTS python)
find_package(OpenCV REQUIRED)
add_definitions(-std=c++11)
add_definitions(-fPIC)
set(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
set(src_dir src)
include_directories(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})
include_directories(include)
include_directories(../include)
add_library(SparseCoding STATIC ${src_dir}/SparseCoding.cpp) 
if (BUILD_PYTHON_WRAPPER)
	PYTHON_ADD_MODULE(python-SparseCoding ${src_dir}/python-SparseCoding.cpp)
	target_link_libraries(python-SparseCoding ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${OpenCV_LIBS} SparseCoding MatrixUtils IOUtils)
	set_target_properties(python-SparseCoding PROPERTIES OUTPUT_NAME "SparseCoding")
endif()
